Fixed div overflowing page.

--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
 #previewhalf{
 	width:70%;
 	height:100%;
+	max-height:100%;
 	float:right;
+	overflow:hidden;
 }
 
 
